# thai-business-nlp

./: LICENSE  README.md  pyproject.toml
src/thai_business_nlp/: config.py  keyword_extract.py  sentiment_analysis.py
src/thai_business_nlp/data/: excluded_keywords.json  keywords.xlsx  stopwords.json
src/thei_business_nlp/: __init__.py  config.py  keyword_extract.py  sentiment_analysis.py
src/thei_business_nlp/data/: contextual_patterns.json  sentiment.json
